// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";
import "restate/common.proto";
import "restate/node.proto";

package restate.log_server;

service LogServerSvc {
  rpc GetDigest(GetDigestRequest) returns (GetDigestResponse);
  rpc GetLogletInfo(GetLogletInfoRequest) returns (GetLogletInfoResponse);
}

message GetDigestRequest {
  uint32 loglet_id = 1;
  // inclusive
  uint32 from_offset = 2;
  // inclusive
  uint32 to_offset = 3;
}
message GetDigestResponse {}

message GetLogletInfoRequest { uint32 loglet_id = 1; }
message GetLogletInfoResponse {}
